--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^11.8.1",
     "framer-motion": "^12.12.1",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
     "sort-by": "^1.2.0"
