--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "firebase": "^11.8.1",
     "framer-motion": "^12.12.1",
     "localforage": "^1.10.0",
