--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.80.7",
     "axios": "^1.10.0",
     "firebase": "^11.8.1",
     "framer-motion": "^12.12.1",
