--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ VITE_projectId=happy-shop-f5e05
 VITE_storageBucket=happy-shop-f5e05.firebasestorage.app
 VITE_messagingSenderId=926837699610
 VITE_appId=1:926837699610:web:dd7a68a3bf7a18c62e0da3
+VITE_imgbbApiKey=a6dfbfb78f386d6ccb1ebdc2a79d3e58
