--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.1",
     "react": "^19.1.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.57.0",
     "react-icons": "^5.5.0",
