--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.57.0",
     "react-icons": "^5.5.0",
+    "react-range": "^1.10.0",
     "react-router-dom": "^7.6.0",
+    "react-slider": "^2.0.6",
     "react-toastify": "^11.0.5",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.22.2"
