--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^10.6.1",
+    "@react-three/fiber": "^9.3.0",
     "@tanstack/react-query": "^5.80.7",
     "axios": "^1.10.0",
     "firebase": "^11.8.1",
     "framer-motion": "^12.12.1",
+    "gsap": "^3.13.0",
     "localforage": "^1.10.0",
+    "maath": "^0.10.8",
     "match-sorter": "^8.0.1",
     "react": "^19.1.0",
     "react-countup": "^6.5.3",
@@ -27,8 +31,9 @@
     "react-router-dom": "^7.6.0",
     "react-slider": "^2.0.6",
     "react-toastify": "^11.0.5",
-    "sort-by": "^1.2.0",
-    "sweetalert2": "^11.22.2"
+    "sort-by": "^0.0.2",
+    "sweetalert2": "^11.6.13",
+    "three": "^0.178.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
