--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-range": "^1.10.0",
     "react-router-dom": "^7.6.0",
     "react-slider": "^2.0.6",
+    "react-tabs": "^6.1.0",
     "react-toastify": "^11.0.5",
     "sort-by": "^0.0.2",
     "sweetalert2": "^11.6.13",
