--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.3.1",
     "@react-three/drei": "^10.6.1",
     "@react-three/fiber": "^9.3.0",
     "@tanstack/react-query": "^5.80.7",
@@ -18,6 +19,8 @@
     "firebase": "^11.8.1",
     "framer-motion": "^12.12.1",
     "gsap": "^3.13.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "localforage": "^1.10.0",
     "maath": "^0.10.8",
     "match-sorter": "^8.0.1",
