--- a/package.json
+++ b/package.json
@@ -6,13 +6,12 @@
   "scripts": {
     "start": "vite",
     "dev": "vite",
-    "build": "vite build",
+    "build": "npm install --legacy-peer-deps && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "@react-pdf/renderer": "^4.3.1",
-    "@react-three/drei": "^10.6.1",
     "@react-three/fiber": "^9.3.0",
     "@tanstack/react-query": "^5.80.7",
     "axios": "^1.10.0",
@@ -24,9 +23,9 @@
     "localforage": "^1.10.0",
     "maath": "^0.10.8",
     "match-sorter": "^8.0.1",
-    "react": "^19.1.0",
+    "react": "^19.2.0",
     "react-countup": "^6.5.3",
-    "react-dom": "^19.1.0",
+    "react-dom": "^19.2.0",
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.57.0",
     "react-icons": "^5.5.0",
