--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "scripts": {
     "start": "vite",
     "dev": "vite",
-    "build": "npm install --legacy-peer-deps && vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "@react-pdf/renderer": "^4.3.1",
-    "@react-three/fiber": "^9.3.0",
+    "@react-three/fiber": "^8.15.0",
     "@tanstack/react-query": "^5.80.7",
     "axios": "^1.10.0",
     "firebase": "^11.8.1",
