--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "installCommand": "yarn install",
-  "buildCommand": "yarn build",
-  "outputDirectory": "dist"
+
+  "installCommand": "npm install --legacy-peer-deps"
+
 }
